--- a/note/org-publish.html
+++ b/note/org-publish.html
@@ -48,9 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad">
+<div class="top-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -68,7 +68,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orge0a11ea">외부 링크</a></li>
+<li><a href="#org322411f">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -85,18 +85,17 @@ org-publish는 <a href="emacs.html">Emacs</a>에서
 상세한 내용은 <a target="_blank" href="https://seorenn.tistory.com/63">🌏Org Publish로 익스포트 자동화하기</a> 글을 참고하자.
 </p>
 
-<div id="outline-container-orge0a11ea" class="outline-2">
-<h2 id="orge0a11ea">외부 링크</h2>
-<div class="outline-text-2" id="text-orge0a11ea">
+<div id="outline-container-org322411f" class="outline-2">
+<h2 id="org322411f">외부 링크</h2>
+<div class="outline-text-2" id="text-org322411f">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/manual/Publishing.html">🌏org-publish 공식 매뉴얼</a></li>
 </ul>
 </div>
 </div>
-</section>
-<div class="top-ad">
+<div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -106,6 +105,7 @@ org-publish는 <a href="emacs.html">Emacs</a>에서
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+</section>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
