--- a/note/org-spreadsheet.html
+++ b/note/org-spreadsheet.html
@@ -48,9 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad">
+<div class="top-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -68,7 +68,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org541086c">외부 링크</a></li>
+<li><a href="#orgad3b596">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -86,28 +86,17 @@ gtag('config', 'UA-44534026-1');
 글을 참고하자.
 </p>
 
-<div id="outline-container-org541086c" class="outline-2">
-<h2 id="org541086c">외부 링크</h2>
-<div class="outline-text-2" id="text-org541086c">
+<div id="outline-container-orgad3b596" class="outline-2">
+<h2 id="orgad3b596">외부 링크</h2>
+<div class="outline-text-2" id="text-orgad3b596">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">🌏Org as a spreadsheet system: a short introduction</a></li>
 </ul>
 </div>
 </div>
-</section>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
-<div class="article-link-date">
-2020년 4월 16일 수정</div>
-</div>
-</div>
-</div>
-<div class="top-ad">
+<div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -116,6 +105,17 @@ gtag('config', 'UA-44534026-1');
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
+</section>
+<div class="backlinks-container">
+<h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
+<div class="article-link-date">
+2020년 4월 16일 수정</div>
+</div>
+</div>
 </div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
