--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -48,9 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad">
+<div class="top-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -68,11 +68,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org838b80a">사용법</a>
+<li><a href="#org3d2678e">사용법</a>
 <ul>
-<li><a href="#org54cd104">무제한 잠자기 방지</a></li>
-<li><a href="#orgf0ae551">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#orgf035396">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#org0458786">무제한 잠자기 방지</a></li>
+<li><a href="#org4d59335">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#org246ef41">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -83,13 +83,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org838b80a" class="outline-2">
-<h2 id="org838b80a">사용법</h2>
-<div class="outline-text-2" id="text-org838b80a">
+<div id="outline-container-org3d2678e" class="outline-2">
+<h2 id="org3d2678e">사용법</h2>
+<div class="outline-text-2" id="text-org3d2678e">
 </div>
-<div id="outline-container-org54cd104" class="outline-3">
-<h3 id="org54cd104">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org54cd104">
+<div id="outline-container-org0458786" class="outline-3">
+<h3 id="org0458786">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org0458786">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -100,9 +100,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-orgf0ae551" class="outline-3">
-<h3 id="orgf0ae551">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-orgf0ae551">
+<div id="outline-container-org4d59335" class="outline-3">
+<h3 id="org4d59335">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org4d59335">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -113,9 +113,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-orgf035396" class="outline-3">
-<h3 id="orgf035396">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-orgf035396">
+<div id="outline-container-org246ef41" class="outline-3">
+<h3 id="org246ef41">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org246ef41">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
@@ -126,10 +126,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 </div>
-</section>
-<div class="top-ad">
+<div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -139,6 +138,7 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+</section>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
