--- a/note/dockerfile.html
+++ b/note/dockerfile.html
@@ -48,9 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad">
+<div class="top-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -68,10 +68,10 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org4deca57">평범한 스펙 예제</a></li>
-<li><a href="#org2fb1e38">사용자 지정</a></li>
-<li><a href="#org8b897c1">Health Checking</a></li>
-<li><a href="#orga70a772">Multi Stage Building</a></li>
+<li><a href="#org77122dd">평범한 스펙 예제</a></li>
+<li><a href="#org73789d7">사용자 지정</a></li>
+<li><a href="#org8e32572">Health Checking</a></li>
+<li><a href="#org70ef2e3">Multi Stage Building</a></li>
 </ul>
 </div>
 </div>
@@ -80,9 +80,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 특수한 DSL 스크립트 언어로 작성하는 스펙 파일이다.
 </p>
 
-<div id="outline-container-org4deca57" class="outline-2">
-<h2 id="org4deca57">평범한 스펙 예제</h2>
-<div class="outline-text-2" id="text-org4deca57">
+<div id="outline-container-org77122dd" class="outline-2">
+<h2 id="org77122dd">평범한 스펙 예제</h2>
+<div class="outline-text-2" id="text-org77122dd">
 <div class="org-src-container">
 <pre class="src src-dockerfile"><span style="color: #51afef;">FROM</span> <span style="color: #ECBE7B; font-weight: bold;">debian:buster</span>
 
@@ -127,9 +127,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </p>
 </div>
 </div>
-<div id="outline-container-org2fb1e38" class="outline-2">
-<h2 id="org2fb1e38">사용자 지정</h2>
-<div class="outline-text-2" id="text-org2fb1e38">
+<div id="outline-container-org73789d7" class="outline-2">
+<h2 id="org73789d7">사용자 지정</h2>
+<div class="outline-text-2" id="text-org73789d7">
 <p>
 특정 사용자로 굴리고(?) 싶다면 <code>USER</code> 커맨드를 쓸 수 있다.
 </p>
@@ -144,9 +144,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </p>
 </div>
 </div>
-<div id="outline-container-org8b897c1" class="outline-2">
-<h2 id="org8b897c1">Health Checking</h2>
-<div class="outline-text-2" id="text-org8b897c1">
+<div id="outline-container-org8e32572" class="outline-2">
+<h2 id="org8e32572">Health Checking</h2>
+<div class="outline-text-2" id="text-org8e32572">
 <div class="org-src-container">
 <pre class="src src-dockerfile"><span style="color: #51afef;">HEALTHCHECK</span> --<span style="color: #dcaeea;">interval</span>=5s <span style="color: #98be65;">\</span>
             --<span style="color: #dcaeea;">timeout</span>=5s <span style="color: #98be65;">\</span>
@@ -156,9 +156,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </div>
 </div>
 </div>
-<div id="outline-container-orga70a772" class="outline-2">
-<h2 id="orga70a772">Multi Stage Building</h2>
-<div class="outline-text-2" id="text-orga70a772">
+<div id="outline-container-org70ef2e3" class="outline-2">
+<h2 id="org70ef2e3">Multi Stage Building</h2>
+<div class="outline-text-2" id="text-org70ef2e3">
 <div class="org-src-container">
 <pre class="src src-dockerfile"><span style="color: #51afef;">FROM</span> <span style="color: #ECBE7B; font-weight: bold;">someimage</span> AS <span style="color: #a9a1e1; font-weight: bold;">stage1</span>
 ...
@@ -173,8 +173,20 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </div>
 </div>
 </div>
+<div class="mid-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle mid-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 </section>
-<hr /><div class="backlinks-container">
+<div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
@@ -190,18 +202,6 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 2020년 4월 15일 수정</div>
 </div>
 </div>
-</div>
-<div class="top-ad">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
