--- a/note/emacs-lisp.html
+++ b/note/emacs-lisp.html
@@ -48,9 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad">
+<div class="top-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -68,27 +68,27 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org62a08fb">개념 메모</a>
+<li><a href="#org15af603">개념 메모</a>
 <ul>
-<li><a href="#org1581678">샤프(Sharpsign)</a></li>
-<li><a href="#orga4ea94d">단 따옴표(Single Quote)</a></li>
-<li><a href="#org176a1ff">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
-<li><a href="#org5ae9a13">apply vs funcall</a></li>
-<li><a href="#orga699e6c">Character</a></li>
-<li><a href="#org2dd0ac6">setq vs setq-default</a></li>
-<li><a href="#orga744a82">Comma and Back-Quote</a></li>
+<li><a href="#orgf44fc3c">샤프(Sharpsign)</a></li>
+<li><a href="#org40ed870">단 따옴표(Single Quote)</a></li>
+<li><a href="#orge162b53">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
+<li><a href="#org9aab222">apply vs funcall</a></li>
+<li><a href="#org0acf0da">Character</a></li>
+<li><a href="#org7ee8d14">setq vs setq-default</a></li>
+<li><a href="#orge4e8af8">Comma and Back-Quote</a></li>
 </ul>
 </li>
-<li><a href="#org3b69db6">코드 예제</a>
+<li><a href="#orgcb5bb40">코드 예제</a>
 <ul>
-<li><a href="#org3b13a96">타입 변환</a></li>
-<li><a href="#org4a0c85e">셸 커맨드</a></li>
+<li><a href="#org8a4ee35">타입 변환</a></li>
+<li><a href="#org9a5b8a3">셸 커맨드</a></li>
 </ul>
 </li>
-<li><a href="#orgcfdc22f">에러 노트</a>
+<li><a href="#org65af874">에러 노트</a>
 <ul>
-<li><a href="#orgbf1e663">commandp</a></li>
-<li><a href="#orgeb1f55c">안 쓰는 매개변수</a></li>
+<li><a href="#orgd75f071">commandp</a></li>
+<li><a href="#org8ebcca1">안 쓰는 매개변수</a></li>
 </ul>
 </li>
 </ul>
@@ -101,13 +101,13 @@ Lisp 언어를 의미한다.
 형태라서 Lisp이 아니라고 하기에도 좀 미묘하긴 하다.
 </p>
 
-<div id="outline-container-org62a08fb" class="outline-2">
-<h2 id="org62a08fb">개념 메모</h2>
-<div class="outline-text-2" id="text-org62a08fb">
+<div id="outline-container-org15af603" class="outline-2">
+<h2 id="org15af603">개념 메모</h2>
+<div class="outline-text-2" id="text-org15af603">
 </div>
-<div id="outline-container-org1581678" class="outline-3">
-<h3 id="org1581678">샤프(Sharpsign)</h3>
-<div class="outline-text-3" id="text-org1581678">
+<div id="outline-container-orgf44fc3c" class="outline-3">
+<h3 id="orgf44fc3c">샤프(Sharpsign)</h3>
+<div class="outline-text-3" id="text-orgf44fc3c">
 <p>
 <code>#</code> (Sharpsign) 은 s-expressions 특수 문법이다.
 근데 뭔 소린지 하나도 모르겠다.
@@ -127,9 +127,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orga4ea94d" class="outline-3">
-<h3 id="orga4ea94d">단 따옴표(Single Quote)</h3>
-<div class="outline-text-3" id="text-orga4ea94d">
+<div id="outline-container-org40ed870" class="outline-3">
+<h3 id="org40ed870">단 따옴표(Single Quote)</h3>
+<div class="outline-text-3" id="text-org40ed870">
 <p>
 단 따옴표 <code>'</code> (혹은 quote 함수)는 식을 그대로 표현할 때 사용한다.
 예를 들어 <code>(1 2 3)</code> 이라는 리스트를 메시지로 출력하고 싶어서
@@ -170,9 +170,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org176a1ff" class="outline-3">
-<h3 id="org176a1ff">샤프 단 따옴표(Sharpsign Single Quote)</h3>
-<div class="outline-text-3" id="text-org176a1ff">
+<div id="outline-container-orge162b53" class="outline-3">
+<h3 id="orge162b53">샤프 단 따옴표(Sharpsign Single Quote)</h3>
+<div class="outline-text-3" id="text-orge162b53">
 <p>
 <code>#'function-name</code> 의 의미는
 <code>(function function-name)</code> 을 줄여서 표기한 것이다.
@@ -194,9 +194,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org5ae9a13" class="outline-3">
-<h3 id="org5ae9a13">apply vs funcall</h3>
-<div class="outline-text-3" id="text-org5ae9a13">
+<div id="outline-container-org9aab222" class="outline-3">
+<h3 id="org9aab222">apply vs funcall</h3>
+<div class="outline-text-3" id="text-org9aab222">
 <p>
 위에서 본 <code>funcall</code> 과 비슷하게 <code>apply</code> 라는 것도 있다.
 사용 방법도 거의 동일하다.
@@ -230,9 +230,9 @@ Lisp 언어를 의미한다.
 </div>
 </div>
 </div>
-<div id="outline-container-orga699e6c" class="outline-3">
-<h3 id="orga699e6c">Character</h3>
-<div class="outline-text-3" id="text-orga699e6c">
+<div id="outline-container-org0acf0da" class="outline-3">
+<h3 id="org0acf0da">Character</h3>
+<div class="outline-text-3" id="text-org0acf0da">
 <p>
 <a href="emacs.html">Emacs</a>에서 문자는 ASCII 번호로 표현된다.
 즉 숫자다.
@@ -248,9 +248,9 @@ A는 65이기 때문에 위 코드는 참을 반환한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org2dd0ac6" class="outline-3">
-<h3 id="org2dd0ac6">setq vs setq-default</h3>
-<div class="outline-text-3" id="text-org2dd0ac6">
+<div id="outline-container-org7ee8d14" class="outline-3">
+<h3 id="org7ee8d14">setq vs setq-default</h3>
+<div class="outline-text-3" id="text-org7ee8d14">
 <p>
 <a href="emacs.html">Emacs</a>에는 버퍼 로컬 변수라는 개념이 있다. 예를 들자면
 <code>tab-width</code> 가 대표적인데, 각 버퍼의 메이저 모드마다 이 변수의 값이 다 다를 수
@@ -268,9 +268,9 @@ A는 65이기 때문에 위 코드는 참을 반환한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orga744a82" class="outline-3">
-<h3 id="orga744a82">Comma and Back-Quote</h3>
-<div class="outline-text-3" id="text-orga744a82">
+<div id="outline-container-orge4e8af8" class="outline-3">
+<h3 id="orge4e8af8">Comma and Back-Quote</h3>
+<div class="outline-text-3" id="text-orge4e8af8">
 <div class="org-src-container">
 <pre class="src src-emacs-lisp"><span style="color: #51afef;">(</span><span style="color: #51afef;">setq</span> a <span style="color: #98be65;">"a's value"</span> b <span style="color: #98be65;">"b's value"</span> c <span style="color: #98be65;">"c's value"</span><span style="color: #51afef;">)</span>
 <span style="color: #51afef;">'</span><span style="color: #51afef;">(</span>a  b  c<span style="color: #51afef;">)</span>      <span style="color: #5B6268;">; </span><span style="color: #5B6268;">=&gt; (a b c)</span>
@@ -285,13 +285,13 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </div>
 </div>
 </div>
-<div id="outline-container-org3b69db6" class="outline-2">
-<h2 id="org3b69db6">코드 예제</h2>
-<div class="outline-text-2" id="text-org3b69db6">
+<div id="outline-container-orgcb5bb40" class="outline-2">
+<h2 id="orgcb5bb40">코드 예제</h2>
+<div class="outline-text-2" id="text-orgcb5bb40">
 </div>
-<div id="outline-container-org3b13a96" class="outline-3">
-<h3 id="org3b13a96">타입 변환</h3>
-<div class="outline-text-3" id="text-org3b13a96">
+<div id="outline-container-org8a4ee35" class="outline-3">
+<h3 id="org8a4ee35">타입 변환</h3>
+<div class="outline-text-3" id="text-org8a4ee35">
 <p>
 숫자(정수 및 실수)와 문자열 간의 전환 두 가지 예제다.
 </p>
@@ -309,9 +309,9 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </p>
 </div>
 </div>
-<div id="outline-container-org4a0c85e" class="outline-3">
-<h3 id="org4a0c85e"><a href="shell.html">셸</a> 커맨드</h3>
-<div class="outline-text-3" id="text-org4a0c85e">
+<div id="outline-container-org9a5b8a3" class="outline-3">
+<h3 id="org9a5b8a3"><a href="shell.html">셸</a> 커맨드</h3>
+<div class="outline-text-3" id="text-org9a5b8a3">
 <p>
 <a href="shell.html">셸</a> 커맨드를 실행시키기 위해 대충 두 가지 함수가 있다.
 </p>
@@ -339,13 +339,13 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </div>
 </div>
 </div>
-<div id="outline-container-orgcfdc22f" class="outline-2">
-<h2 id="orgcfdc22f">에러 노트</h2>
-<div class="outline-text-2" id="text-orgcfdc22f">
+<div id="outline-container-org65af874" class="outline-2">
+<h2 id="org65af874">에러 노트</h2>
+<div class="outline-text-2" id="text-org65af874">
 </div>
-<div id="outline-container-orgbf1e663" class="outline-3">
-<h3 id="orgbf1e663">commandp</h3>
-<div class="outline-text-3" id="text-orgbf1e663">
+<div id="outline-container-orgd75f071" class="outline-3">
+<h3 id="orgd75f071">commandp</h3>
+<div class="outline-text-3" id="text-orgd75f071">
 <blockquote>
 <p>
 Wrong type argument: commandp, your-function
@@ -365,9 +365,9 @@ Wrong type argument: commandp, your-function
 </div>
 </div>
 </div>
-<div id="outline-container-orgeb1f55c" class="outline-3">
-<h3 id="orgeb1f55c">안 쓰는 매개변수</h3>
-<div class="outline-text-3" id="text-orgeb1f55c">
+<div id="outline-container-org8ebcca1" class="outline-3">
+<h3 id="org8ebcca1">안 쓰는 매개변수</h3>
+<div class="outline-text-3" id="text-org8ebcca1">
 <p>
 예를 들어 아래와 같은 코드에서
 </p>
@@ -399,27 +399,9 @@ Unused lexical argument 'bar'
 </div>
 </div>
 </div>
-</section>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
-<div class="article-link-date">
-2020년 4월 21일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
-<div class="article-link-date">
-2020년 4월 19일 수정</div>
-</div>
-</div>
-</div>
-<div class="top-ad">
+<div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -428,6 +410,24 @@ Unused lexical argument 'bar'
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
+</section>
+<div class="backlinks-container">
+<h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
+<div class="article-link-date">
+2020년 4월 22일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<div class="article-link-date">
+2020년 4월 22일 수정</div>
+</div>
+</div>
 </div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
