--- a/note/find.html
+++ b/note/find.html
@@ -48,9 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad">
+<div class="top-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -68,14 +68,14 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgeffd038">기본 사용법</a>
+<li><a href="#org4ce75f8">기본 사용법</a>
 <ul>
-<li><a href="#org3c6339b">현재 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#org98a2dfd">특정 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#org60af65d">검색 패턴</a></li>
-<li><a href="#org3222072">대소문자 무시하기</a></li>
-<li><a href="#orgab82875">검색 종류 지정하기</a></li>
-<li><a href="#orgfe8ace4">검색 내용으로 특정 처리하기(exec)</a></li>
+<li><a href="#org0c31427">현재 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#orgca8af61">특정 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#orgfaa8635">검색 패턴</a></li>
+<li><a href="#orgc13cc91">대소문자 무시하기</a></li>
+<li><a href="#org3894ab1">검색 종류 지정하기</a></li>
+<li><a href="#org88a07c0">검색 내용으로 특정 처리하기(exec)</a></li>
 </ul>
 </li>
 </ul>
@@ -86,13 +86,13 @@ gtag('config', 'UA-44534026-1');
 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-orgeffd038" class="outline-2">
-<h2 id="orgeffd038">기본 사용법</h2>
-<div class="outline-text-2" id="text-orgeffd038">
+<div id="outline-container-org4ce75f8" class="outline-2">
+<h2 id="org4ce75f8">기본 사용법</h2>
+<div class="outline-text-2" id="text-org4ce75f8">
 </div>
-<div id="outline-container-org3c6339b" class="outline-3">
-<h3 id="org3c6339b">현재 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-org3c6339b">
+<div id="outline-container-org0c31427" class="outline-3">
+<h3 id="org0c31427">현재 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-org0c31427">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> . -name <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -104,9 +104,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org98a2dfd" class="outline-3">
-<h3 id="org98a2dfd">특정 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-org98a2dfd">
+<div id="outline-container-orgca8af61" class="outline-3">
+<h3 id="orgca8af61">특정 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-orgca8af61">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> /foo/bar <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -116,9 +116,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org60af65d" class="outline-3">
-<h3 id="org60af65d">검색 패턴</h3>
-<div class="outline-text-3" id="text-org60af65d">
+<div id="outline-container-orgfaa8635" class="outline-3">
+<h3 id="orgfaa8635">검색 패턴</h3>
+<div class="outline-text-3" id="text-orgfaa8635">
 <p>
 찾을 패턴으로 와일드카드를 사용할 수도 있다.
 </p>
@@ -131,9 +131,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org3222072" class="outline-3">
-<h3 id="org3222072">대소문자 무시하기</h3>
-<div class="outline-text-3" id="text-org3222072">
+<div id="outline-container-orgc13cc91" class="outline-3">
+<h3 id="orgc13cc91">대소문자 무시하기</h3>
+<div class="outline-text-3" id="text-orgc13cc91">
 <p>
 기본적으로 이 도구는 대소문자를 가린다.
 만약 대소문자를 가리지 않으려면 <code>iname</code> 옵션을 사용할 수 있다.
@@ -144,9 +144,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-orgab82875" class="outline-3">
-<h3 id="orgab82875">검색 종류 지정하기</h3>
-<div class="outline-text-3" id="text-orgab82875">
+<div id="outline-container-org3894ab1" class="outline-3">
+<h3 id="org3894ab1">검색 종류 지정하기</h3>
+<div class="outline-text-3" id="text-org3894ab1">
 <p>
 만약 특정한 종류만 검색하고 싶다면 <code>type</code> 옵션을 사용할 수 있다.
 </p>
@@ -164,9 +164,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orgfe8ace4" class="outline-3">
-<h3 id="orgfe8ace4">검색 내용으로 특정 처리하기(exec)</h3>
-<div class="outline-text-3" id="text-orgfe8ace4">
+<div id="outline-container-org88a07c0" class="outline-3">
+<h3 id="org88a07c0">검색 내용으로 특정 처리하기(exec)</h3>
+<div class="outline-text-3" id="text-org88a07c0">
 <p>
 <code>-exec</code> 옵션은 검색된 내용을 이용해 외부 도구를 실행시킬 수 있게 할 수 있다.
 </p>
@@ -194,10 +194,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-</section>
-<div class="top-ad">
+<div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -207,6 +206,7 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+</section>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
