--- a/note/flutter.html
+++ b/note/flutter.html
@@ -48,9 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad">
+<div class="top-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -68,10 +68,10 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org84b33fe">문제 해결</a>
+<li><a href="#orgd1c4386">문제 해결</a>
 <ul>
-<li><a href="#orgb9b4b40">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#orgecf0e0a">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#orged02a7a">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#orgfb73441">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
 </ul>
@@ -87,13 +87,13 @@ Flutter(플러터)는 Dart라는 한 가지 언어로 iOS, Android 등
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-org84b33fe" class="outline-2">
-<h2 id="org84b33fe">문제 해결</h2>
-<div class="outline-text-2" id="text-org84b33fe">
+<div id="outline-container-orgd1c4386" class="outline-2">
+<h2 id="orgd1c4386">문제 해결</h2>
+<div class="outline-text-2" id="text-orgd1c4386">
 </div>
-<div id="outline-container-orgb9b4b40" class="outline-3">
-<h3 id="orgb9b4b40">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-orgb9b4b40">
+<div id="outline-container-orged02a7a" class="outline-3">
+<h3 id="orged02a7a">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-orged02a7a">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -126,9 +126,9 @@ Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot 
 </p>
 </div>
 </div>
-<div id="outline-container-orgecf0e0a" class="outline-3">
-<h3 id="orgecf0e0a">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-orgecf0e0a">
+<div id="outline-container-orgfb73441" class="outline-3">
+<h3 id="orgfb73441">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-orgfb73441">
 <p>
 <code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
@@ -163,10 +163,9 @@ was built for iOS. (in target 'Runner' from project 'Runner')
 </div>
 </div>
 </div>
-</section>
-<div class="top-ad">
+<div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -176,6 +175,7 @@ was built for iOS. (in target 'Runner' from project 'Runner')
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+</section>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
