--- a/note/motion.html
+++ b/note/motion.html
@@ -48,9 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad">
+<div class="top-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -68,15 +68,15 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org811fa1f">단축키</a></li>
-<li><a href="#org0a7594d">팁</a>
+<li><a href="#org77d7c96">단축키</a></li>
+<li><a href="#org8699224">팁</a>
 <ul>
-<li><a href="#org4ef3826">효과 적용 시간 보장하기</a></li>
+<li><a href="#org37bcfd3">효과 적용 시간 보장하기</a></li>
 </ul>
 </li>
-<li><a href="#orge1d1828">기타</a>
+<li><a href="#org9335cd7">기타</a>
 <ul>
-<li><a href="#orgbb6b947">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
+<li><a href="#org950cf21">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
 </ul>
 </li>
 </ul>
@@ -92,9 +92,9 @@ gtag('config', 'UA-44534026-1');
 그래서 혹자는 "<a href="fcpx.html">Final Cut Pro X</a>과 모션을 같이 써야 완전체다" 라고 말하기도 한다.
 </p>
 
-<div id="outline-container-org811fa1f" class="outline-2">
-<h2 id="org811fa1f">단축키</h2>
-<div class="outline-text-2" id="text-org811fa1f">
+<div id="outline-container-org77d7c96" class="outline-2">
+<h2 id="org77d7c96">단축키</h2>
+<div class="outline-text-2" id="text-org77d7c96">
 <dl class="org-dl">
 <dt><code>Command D</code></dt><dd>복제(Duplicate)</dd>
 <dt><code>Shift M</code></dt><dd>마커(Marker)</dd>
@@ -102,13 +102,13 @@ gtag('config', 'UA-44534026-1');
 </dl>
 </div>
 </div>
-<div id="outline-container-org0a7594d" class="outline-2">
-<h2 id="org0a7594d">팁</h2>
-<div class="outline-text-2" id="text-org0a7594d">
+<div id="outline-container-org8699224" class="outline-2">
+<h2 id="org8699224">팁</h2>
+<div class="outline-text-2" id="text-org8699224">
 </div>
-<div id="outline-container-org4ef3826" class="outline-3">
-<h3 id="org4ef3826">효과 적용 시간 보장하기</h3>
-<div class="outline-text-3" id="text-org4ef3826">
+<div id="outline-container-org37bcfd3" class="outline-3">
+<h3 id="org37bcfd3">효과 적용 시간 보장하기</h3>
+<div class="outline-text-3" id="text-org37bcfd3">
 <p>
 타이틀 템플릿은 프로젝트 기본 설정과는 다르게 마음껏 늘여서 쓸 수도 있다.
 이럴 경우 애니메이션 등의 효과도 같이 늘어나게 되는데, 이 애니메이션 시간을 원래 프로젝트에서 만든 시간으로 보정할 수 있다.
@@ -126,13 +126,13 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-orge1d1828" class="outline-2">
-<h2 id="orge1d1828">기타</h2>
-<div class="outline-text-2" id="text-orge1d1828">
+<div id="outline-container-org9335cd7" class="outline-2">
+<h2 id="org9335cd7">기타</h2>
+<div class="outline-text-2" id="text-org9335cd7">
 </div>
-<div id="outline-container-orgbb6b947" class="outline-3">
-<h3 id="orgbb6b947">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
-<div class="outline-text-3" id="text-orgbb6b947">
+<div id="outline-container-org950cf21" class="outline-3">
+<h3 id="org950cf21">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
+<div class="outline-text-3" id="text-org950cf21">
 <p>
 아직 버그인지 모르겠지만, <a href="macos.html">macOS</a>를 한국어로 설정해서 사용하는 경우
 한글로 된 폰트가 폰트 목록에서 누락되는 경우가 있다.
@@ -142,20 +142,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-</section>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/fcpx.html">Final Cut Pro X</a></h2>
-<div class="article-link-date">
-2020년 4월 23일 수정</div>
-</div>
-</div>
-</div>
-<div class="top-ad">
+<div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -164,6 +153,17 @@ gtag('config', 'UA-44534026-1');
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
+</section>
+<div class="backlinks-container">
+<h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/fcpx.html">Final Cut Pro X</a></h2>
+<div class="article-link-date">
+2020년 4월 23일 수정</div>
+</div>
+</div>
 </div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
