--- a/note/nextstep.html
+++ b/note/nextstep.html
@@ -48,9 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad">
+<div class="top-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -87,10 +87,9 @@ OS X이나 macOS의 전신인 만큼,
 특히 Core Foundation 쪽의 클래스들이 전부 <code>NS</code> 라는 이름으로 시작한다는 것이 가장 인상에 남는다.
 물론 NS는 NeXTSTEP의 약자임을 쉽게 알 수 있다.
 </p>
-</section>
-<div class="top-ad">
+<div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -100,6 +99,7 @@ OS X이나 macOS의 전신인 만큼,
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+</section>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
