--- a/note/seorenn.html
+++ b/note/seorenn.html
@@ -48,9 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad">
+<div class="top-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -92,9 +92,9 @@ Java와 C++은 아주 혐오하는 것 같다.
 기타 고전 건축이나 기둥에 흥분하는 변태 같다.
 </p>
 
-<div id="outline-container-org97761ae" class="outline-2">
-<h2 id="org97761ae">외부 링크</h2>
-<div class="outline-text-2" id="text-org97761ae">
+<div id="outline-container-orgcd190d3" class="outline-2">
+<h2 id="orgcd190d3">외부 링크</h2>
+<div class="outline-text-2" id="text-orgcd190d3">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/seorenn">🌏GitHub</a></li>
 <li><a target="_blank" href="https://twitter.com/seorenn">🌏Twitter</a></li>
@@ -106,10 +106,9 @@ Java와 C++은 아주 혐오하는 것 같다.
 </ul>
 </div>
 </div>
-</section>
-<div class="top-ad">
+<div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -119,6 +118,7 @@ Java와 C++은 아주 혐오하는 것 같다.
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+</section>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
