--- a/note/tmux.html
+++ b/note/tmux.html
@@ -48,9 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad">
+<div class="top-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -68,20 +68,20 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgb2afdec">사용법</a></li>
-<li><a href="#org47f7c23">설정 방법</a>
+<li><a href="#org9f34aff">사용법</a></li>
+<li><a href="#orgc628ab2">설정 방법</a>
 <ul>
-<li><a href="#orga03543e">리더 키(Prefix) 변경하기</a></li>
+<li><a href="#org3e803c4">리더 키(Prefix) 변경하기</a></li>
 </ul>
 </li>
-<li><a href="#org334c2ea">단축키</a></li>
-<li><a href="#orgd22eb2f">기타 팁</a>
+<li><a href="#orgce548ff">단축키</a></li>
+<li><a href="#org14cf84f">기타 팁</a>
 <ul>
-<li><a href="#org9dab52e">선택 영역 복사하기</a></li>
-<li><a href="#orge2e9c6e">종료하지 않고 설정 다시 읽어 들이기</a></li>
+<li><a href="#org75e4922">선택 영역 복사하기</a></li>
+<li><a href="#org25ca38f">종료하지 않고 설정 다시 읽어 들이기</a></li>
 </ul>
 </li>
-<li><a href="#org540bd18">관련된 글들</a></li>
+<li><a href="#org58bbefc">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -95,9 +95,9 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 비슷하면서도 원조 격인 <code>screen</code> 이라는 도구에 영향을 많이 받은 것으로 보인다.
 </p>
 
-<div id="outline-container-orgb2afdec" class="outline-2">
-<h2 id="orgb2afdec">사용법</h2>
-<div class="outline-text-2" id="text-orgb2afdec">
+<div id="outline-container-org9f34aff" class="outline-2">
+<h2 id="org9f34aff">사용법</h2>
+<div class="outline-text-2" id="text-org9f34aff">
 <p>
 그냥 실행시키면 실행은 된다.
 </p>
@@ -123,16 +123,16 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 </div>
 </div>
 </div>
-<div id="outline-container-org47f7c23" class="outline-2">
-<h2 id="org47f7c23">설정 방법</h2>
-<div class="outline-text-2" id="text-org47f7c23">
+<div id="outline-container-orgc628ab2" class="outline-2">
+<h2 id="orgc628ab2">설정 방법</h2>
+<div class="outline-text-2" id="text-orgc628ab2">
 <p>
 <code>~/.tmux.conf</code> 파일에 원하는 설정을 기록할 수 있다.
 </p>
 </div>
-<div id="outline-container-orga03543e" class="outline-3">
-<h3 id="orga03543e">리더 키(Prefix) 변경하기</h3>
-<div class="outline-text-3" id="text-orga03543e">
+<div id="outline-container-org3e803c4" class="outline-3">
+<h3 id="org3e803c4">리더 키(Prefix) 변경하기</h3>
+<div class="outline-text-3" id="text-org3e803c4">
 <p>
 기본 리더키는 <code>^b</code> (Ctrl-B)로 설정되어 있다.
 이걸 바꾸려면, 예를 들어 리더 키를 <code>^\</code> 로 바꾸려면
@@ -162,9 +162,9 @@ set-option -g prefix2 C-']'
 </div>
 </div>
 </div>
-<div id="outline-container-org334c2ea" class="outline-2">
-<h2 id="org334c2ea">단축키</h2>
-<div class="outline-text-2" id="text-org334c2ea">
+<div id="outline-container-orgce548ff" class="outline-2">
+<h2 id="orgce548ff">단축키</h2>
+<div class="outline-text-2" id="text-orgce548ff">
 <p>
 아래에 언급하는 모든 단축키는 리더 키(Prefix)를 먼저 누른 후 눌러야 한다.
 참고로 리더 키는 앞서 언급한 대로
@@ -187,13 +187,13 @@ set-option -g prefix2 C-']'
 </dl>
 </div>
 </div>
-<div id="outline-container-orgd22eb2f" class="outline-2">
-<h2 id="orgd22eb2f">기타 팁</h2>
-<div class="outline-text-2" id="text-orgd22eb2f">
+<div id="outline-container-org14cf84f" class="outline-2">
+<h2 id="org14cf84f">기타 팁</h2>
+<div class="outline-text-2" id="text-org14cf84f">
 </div>
-<div id="outline-container-org9dab52e" class="outline-3">
-<h3 id="org9dab52e">선택 영역 복사하기</h3>
-<div class="outline-text-3" id="text-org9dab52e">
+<div id="outline-container-org75e4922" class="outline-3">
+<h3 id="org75e4922">선택 영역 복사하기</h3>
+<div class="outline-text-3" id="text-org75e4922">
 <p>
 마우스로 드래그 해서 <code>^C</code> 혹은 Command-C 를 눌렀는데 복사가 안 된다면
 <code>^W</code> (Ctrl+W)를 눌러보자.
@@ -207,9 +207,9 @@ set-option -g prefix2 C-']'
 </p>
 </div>
 </div>
-<div id="outline-container-orge2e9c6e" class="outline-3">
-<h3 id="orge2e9c6e">종료하지 않고 설정 다시 읽어 들이기</h3>
-<div class="outline-text-3" id="text-orge2e9c6e">
+<div id="outline-container-org25ca38f" class="outline-3">
+<h3 id="org25ca38f">종료하지 않고 설정 다시 읽어 들이기</h3>
+<div class="outline-text-3" id="text-org25ca38f">
 <p>
 tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 리더 키(Prefix)를 누르고 아래 커맨드를 입력해 보자.
@@ -237,9 +237,9 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 </div>
 </div>
 </div>
-<div id="outline-container-org540bd18" class="outline-2">
-<h2 id="org540bd18">관련된 글들</h2>
-<div class="outline-text-2" id="text-org540bd18">
+<div id="outline-container-org58bbefc" class="outline-2">
+<h2 id="org58bbefc">관련된 글들</h2>
+<div class="outline-text-2" id="text-org58bbefc">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/gpakosz/.tmux">🌏🇫🇷 Oh My Tmux! Pretty &amp; versatile tmux configuration</a>:
 잘 만들어진 설정을 공유하고 있으며 그대로 쓰기에도 괜찮고
@@ -247,20 +247,9 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 </ul>
 </div>
 </div>
-</section>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
-<div class="article-link-date">
-2020년 4월 16일 수정</div>
-</div>
-</div>
-</div>
-<div class="top-ad">
+<div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
+<ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -269,6 +258,17 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
+</section>
+<div class="backlinks-container">
+<h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<div class="article-link-date">
+2020년 4월 22일 수정</div>
+</div>
+</div>
 </div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
